cmake_minimum_required(VERSION 2.8.9)
project (features)

add_compile_options(-std=c++11)

include_directories(include)

add_executable(decltype src/decltype.cpp)
add_executable(auto src/auto.cpp)
add_executable(enhanced_for_loop src/enhanced_for_loop.cpp)
add_executable(nested src/nested.cpp)
add_executable(c++98_initialization src/c++98_initialization.cpp)
add_executable(c++11_initialization src/c++11_initialization.cpp)
add_executable(initializer_list src/initializer_list.cpp)
add_executable(object_initialization src/object_initialization.cpp)
add_executable(simple_lambada_expression src/simple_lambada_expression.cpp)
add_executable(lambada_parameters src/lambada_parameters.cpp)
add_executable(lambda_capture_expression src/lambda_capture_expression.cpp)
add_executable(lambda_this src/lambda_this.cpp)
add_executable(functional_types src/functional_types.cpp)
add_executable(mutable_lambda src/mutable_lambda.cpp)
